network/subnet.tf
# SUBNETS



# PRIVATE SUBNETS
resource "aws_subnet" "praivate_subnet1" {
  vpc_id     = aws_vpc.main.id
  cidr_block = var.cidr_block_subnet[1]
  availability_zone="us-east-1a"
  tags = {
    Name = "praivate_subnet1"
  }
}
resource "aws_subnet" "praivate_subnet2" {
  vpc_id     = aws_vpc.main.id
  cidr_block = var.cidr_block_subnet[3]
  availability_zone="us-east-1b"
  tags = {
    Name = "praivate_subnet2"
  }
}

# -------------------------------------------------

# PUBLIC SUBNETS
resource "aws_subnet" "public_subnet1" {
  vpc_id     = aws_vpc.main.id
  cidr_block = var.cidr_block_subnet[0]
  availability_zone="us-east-1a"
  map_public_ip_on_launch = true
  tags = {
    Name = "public_subnet1"
  }
}
resource "aws_subnet" "public_subnet2" {
  vpc_id     = aws_vpc.main.id
  cidr_block = var.cidr_block_subnet[2]
  availability_zone="us-east-1b"
  map_public_ip_on_launch = true
  tags = {
    Name = "public_subnet2"
  }
}
